--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-	"name": "rbxts-transformer-services",
-	"version": "1.1.1",
-	"description": "A transformer that converts @rbxts/services imports into plain GetService calls.",
+	"name": "rbxts-transformer-setget",
+	"version": "0.0.1",
+	"description": "Allows getters/setters in roblox-ts.",
 	"main": "out/index.js",
-	"author": "Fireboltofdeath <fireboltofpublic@gmail.com> (https://github.com/Fireboltofdeath)",
+	"author": "wAD",
 	"license": "ISC",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/FireTS/rbxts-transformer-services.git"
+		"url": "https://github.com/wAD4444/rbxts-transformer-setget"
 	},
 	"peerDependencies": {
 		"typescript": "^5.2.2"
@@ -18,14 +18,9 @@
 		"watch": "tsc -w"
 	},
 	"devDependencies": {
+		"@biomejs/biome": "^1.8.3",
 		"@types/node": "^18.18.6",
-		"@types/ts-expose-internals": "npm:ts-expose-internals@5.2.2",
-		"@typescript-eslint/eslint-plugin": "^4.9.1",
-		"@typescript-eslint/parser": "^4.9.1",
-		"eslint": "^7.15.0",
-		"eslint-config-prettier": "^7.0.0",
-		"eslint-plugin-prettier": "^3.2.0",
-		"prettier": "^2.2.1"
+		"@types/ts-expose-internals": "npm:ts-expose-internals@5.2.2"
 	},
 	"files": [
 		"out"
