--- a/package.json
+++ b/package.json
@@ -22,9 +22,7 @@
 		"@types/node": "^18.18.6",
 		"@types/ts-expose-internals": "npm:ts-expose-internals@5.2.2"
 	},
-	"files": [
-		"out"
-	],
+	"files": ["out"],
 	"dependencies": {
 		"chalk": "^4.1.2"
 	}
